--- a/css/company.css
+++ b/css/company.css
@@ -17,6 +17,7 @@ header {
 
 a {
   text-decoration: none;
+  display: block;
 }
 
 a:hover {
@@ -27,6 +28,7 @@ a:hover {
   display: flex;
   text-align: right;
   font-weight: bold;
+  margin: 10px 5px;
 }
 
 .menu-item-list {
@@ -70,6 +72,12 @@ a:hover {
   .nav li {
     list-style-type: none;
     margin-top: 50px;
+    color: blue;
+  }
+  .nav a {
+    color: blue;
+  }
+  .nav a:visited {
     color: blue;
   }
 
@@ -247,5 +255,8 @@ footer {
   }
   .footer-responsive li {
     padding: 10px 20px;
+  }
+  .copyright {
+    margin: auto 5px;
   }
 }
