--- a/css/contact.css
+++ b/css/contact.css
@@ -17,6 +17,7 @@ header {
 
 a {
   text-decoration: none;
+  display: block;
 }
 
 a:hover {
@@ -27,6 +28,7 @@ a:hover {
   display: flex;
   text-align: right;
   font-weight: bold;
+  margin: 10px 5px;
 }
 
 .menu-item-list {
@@ -70,6 +72,9 @@ a:hover {
   .nav li {
     list-style-type: none;
     margin-top: 50px;
+    color: blue;
+  }
+  .nav a {
     color: blue;
   }
 
@@ -180,7 +185,8 @@ textarea {
   margin-bottom: 20px;
   width: 100%;
   height: 160px;
-  font-size: 20px;
+  font-size: 18px;
+  resize: none;
 }
 .submit-btn {
   margin: 0 auto;
@@ -195,6 +201,7 @@ input[type="submit"] {
   margin: 10px auto;
   padding: 10px;
   font-weight: bold;
+  display: block;
 }
 
 footer {
@@ -249,5 +256,8 @@ footer {
   }
   .footer-responsive li {
     padding: 10px 20px;
+  }
+  .copyright {
+    margin: auto 5px;
   }
 }
