--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ header {
 
 a {
   text-decoration: none;
+  display: block;
 }
 
 a:hover {
@@ -71,6 +72,12 @@ a:hover {
   .nav li {
     list-style-type: none;
     margin-top: 50px;
+    color: blue;
+  }
+  .nav a {
+    color: blue;
+  }
+  .nav a:visited {
     color: blue;
   }
 
@@ -253,7 +260,6 @@ main {
 a:visited {
   color: #000;
 }
-
 .news-item:hover {
   background: #ddd;
 }
@@ -310,20 +316,20 @@ a:visited {
   display: flex;
   margin-bottom: 50px;
 }
-.box1 {
+.box1,
+.box2 {
   width: 50%;
   height: 150px;
   position: relative;
 }
+
 .about {
   background: red;
   width: 100%;
   height: 150px;
   color: #fff;
 }
-.about a:hover {
-  opacity: 0.6;
-}
+
 .info-ttl1 {
   font-size: 25px;
   font-weight: bold;
@@ -334,7 +340,7 @@ a:visited {
 }
 
 .recruit {
-  width: 50%;
+  width: 100%;
   background: #000;
   height: 150px;
   position: relative;
@@ -420,5 +426,8 @@ footer {
   }
   .footer-responsive li {
     padding: 10px 20px;
+  }
+  .copyright {
+    margin: auto 5px;
   }
 }
