--- a/css/news.css
+++ b/css/news.css
@@ -17,6 +17,7 @@ header {
 
 a {
   text-decoration: none;
+  display: block;
 }
 
 a:hover {
@@ -27,6 +28,7 @@ a:hover {
   display: flex;
   text-align: right;
   font-weight: bold;
+  margin: 10px 5px;
 }
 
 .menu-item-list {
@@ -70,6 +72,12 @@ a:hover {
   .nav li {
     list-style-type: none;
     margin-top: 50px;
+    color: blue;
+  }
+  .nav a {
+    color: blue;
+  }
+  .nav a:visited {
     color: blue;
   }
 
@@ -146,6 +154,13 @@ main {
   padding: 60px 25px;
   box-sizing: border-box;
 }
+.news a {
+  color: #000;
+}
+
+.news a:visited {
+  color: #000;
+}
 
 .news-item {
   width: 80%;
@@ -155,6 +170,7 @@ main {
   text-align: left;
   border: 1px solid #000;
 }
+
 .date {
   font-size: 15px;
   margin: 20px 15px;
@@ -248,5 +264,8 @@ footer {
   }
   .footer-responsive li {
     padding: 10px 20px;
+  }
+  .copyright {
+    margin: auto 5px;
   }
 }
